Исправил описание всех игр - добавил блок про опенсорсность и кому присать в случае чего, а так же более детально рассказал про подключение по вебсокетам

--- a/src/main/webapp/resources/help/snake.html
+++ b/src/main/webapp/resources/help/snake.html
@@ -46,19 +46,28 @@
                         <p>Надо написать своего бота для змейки, который обыграет других
                             ботов по очкам. Каждый игрок играет на своем поле. Змейка может передвигаться
                             по свободным ячейкам во все четыре стороны.</p>
-						<p>На своем пути змейка может повстречать яблочко, какушку, Свой хвост и стену.
+                        <p>На своем пути змейка может повстречать яблочко, какушку, Свой хвост и стену.
                             В случае схедания яблочка замейка удлиннится на 1. Если же испробует
                             какушку - укоротится на 10 попугаев. Если ее длинна меньше 10 - погибнет.
                             Если попробует на вкус себя или стену - так же погибнет.</p>
                         <p>За съеденные яблочки боту игрока начисляются очки. За смерть питомца - штрафные.
                             Очки суммируются. Побеждает игрок с большим числом очков (до условленного
                             времени). Мертвая змейка тут же пропадает и на поле появляется новая.</p>
-                        <p>Итак, игрок регистрируется на сервере, указывая свой userName</p>
-                        <p>Далее необходимо подключиться <a href="/codenjoy-contest/resources/user/snake-servers.zip">из кода</a> к серверу через вебсокеты.
-                            Адрес для подключения к игре на сервере http://codenjoy.com:</p>
-                        <pre>ws://tetrisj.jvmhost.net:12270/codenjoy-contest/ws?user=userName</pre>
-                        <p>После этого клиент будет регулярно (каждую секунду) получать строку
-                            символов — с закодированным состоянием доски. Формат таков</p>
+
+                        <p>Итак, игрок <a href="/codenjoy-contest/register?gameName=snake" target="_blank">
+                            регистрируется на сервере</a>, указывая свой email</p>
+                        <p>Далее необходимо подключиться <a href="/codenjoy-contest/resources/user/snake-servers.zip">из кода</a>
+                            к серверу через вебсокеты. Это Maven проект и подойдет он дял игры на JVM языках.
+                            Как его запустить смотри в корне README.txt</p>
+                        <p>Для других языков придется написать свой клиент (а после пошарить с нами на почту: apofig@gmail.com)</p>
+                        <p>Адрес для подключения к игре на сервере http://codenjoy.com:</p>
+                        <pre>ws://tetrisj.jvmhost.net:12270/codenjoy-contest/ws?user=email</pre>
+                        <p>Адрес для подключения к игре на сервере, развернутом в локальной сети:</p>
+                        <pre>ws://server_ip:8080/codenjoy-contest/ws?user=email</pre>
+                        <p>Тут email - имейл, указанынй при регистрации на сервере.</p>
+                        <p>После подключения клиент будет регулярно (каждую секунду) получать строку
+                            символов — с закодированным состоянием поля. Формат таков</p>
+
                         <pre>^board=(.*)$</pre>
                         <p>с помощью этого regexp можно выкусить строку доски.
                             Вот пример строки от сервера:</p>
@@ -92,7 +101,7 @@
                         <p>Яблоко</p>
                         <pre>APPLE('☺')</pre>
                         <p>Изображения тела змейки</p>
-						<pre>TAIL("╙╘╓╕═║╗╝╔╚")</pre>
+                        <pre>TAIL("╙╘╓╕═║╗╝╔╚")</pre>
                         <p>Голова змейки в зависимости от направления движения</p>
                         <pre>HEAD("◄►▲▼")</pre>
                         <p>Какушка</p>
@@ -107,7 +116,13 @@
                             Затем заставить змейку слушаться команды. Таким образом, игрок
                             подготовится к основной игре. Основная задача – вести осмысленную игру
                             и победить.</p>
-                        <p>По возникающим вопросам, обращайтесь в skype: alexander.baglay</p>
+
+                        <p>Игра с открытым исходным кодом. Для реализации своей игры, исправления
+                            ошибок в текущей и внесения других правок необходимо для начала
+                            <a href="https://github.com/codenjoyme">форкнуть проект</a>.
+                            В корне репозитория есть описание в файле Readme.md - там описано, что делать дальше.</p>
+                        <p>По возникающим вопросам, пиши в <a href="skype:alexander.baglay">skype:alexander.baglay</a>
+                            или на почту <a href="mailto:apofig@gmail.com">apofig@gmail.com</a></p>
                     </div>
                 </div>
             </div>
