Подправил правила, 0,0 находится в нижшем левом углу

--- a/src/main/webapp/resources/help/snake-en.html
+++ b/src/main/webapp/resources/help/snake-en.html
@@ -89,7 +89,7 @@
                         <pre>board=☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼             ☼☼      ☻      ☼☼            ☺☼☼            ▲☼☼            ║☼☼            ║☼☼            ║☼☼            ╙☼☼             ☼☼             ☼☼             ☼☼             ☼☼             ☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼</pre>
                         <p>Line length equals the area of the field. Inserting a line break symbol                            each sqrt(length(string)) of symbols will produce a readable
                             depiction of the field.</p>
-                        <pre>☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼
+<pre>☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼
 ☼             ☼
 ☼      ☻      ☼
 ☼            ☺☼
@@ -104,8 +104,8 @@
 ☼             ☼
 ☼             ☼
 ☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼</pre>
-                        <p>The first line symbol corresponds with the cell located in the top left corner and has the coordinates [0, 0]. In this example, this is the position of the snake's head
-                            (symbol ▲) — [13, 4].</p>
+                        <p>The first line symbol corresponds with the cell located in the bottom left corner and has the coordinates [0, 0]. In this example, this is the position of the snake's head
+                            (symbol ▲) — [13, 10], and stone (symbol ☻) - [7, 12].</p>
                         <p>Symbol explanation</p>
                         <p>Blank space — a cell the snake can move into</p>
                         <pre>NONE(' ')</pre>
