--- a/src/main/webapp/resources/help/snake.html
+++ b/src/main/webapp/resources/help/snake.html
@@ -92,7 +92,7 @@
 						<p>Длинна строки равна площади поля. Если вставить символ переноса строки
                             каждые sqrt(length(string)) символов, то получится читабельное
                             изображение поля.</p>
-                        <pre>☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼
+<pre>☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼
 ☼             ☼
 ☼      ☻      ☼
 ☼            ☺☼
@@ -107,9 +107,9 @@
 ☼             ☼
 ☼             ☼
 ☼☼☼☼☼☼☼☼☼☼☼☼☼☼☼</pre>
-                        <p>Первый символ строки соответствует ячейке расположенной в левом верхнем
+                        <p>Первый символ строки соответствует ячейке расположенной в левом нижнем
                             углу и имеет координату [0, 0]. В этом примере — позиция головы змейки
-                            (символ ▲) — [13, 4].</p>
+                            (символ ▲) — [13, 10], а камня (символ ☻) - [7, 12].</p>
                         <p>Расшифровка символов</p>
                         <p>Пустое место – по которому может двигаться змейка</p>
                         <pre>NONE(' ')</pre>
