--- a/src/main/javascript/test/run-test.html
+++ b/src/main/javascript/test/run-test.html
@@ -13,7 +13,7 @@
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
-
+d
   You should have received a copy of the GNU General Public
   License along with this program.  If not, see
   <http://www.gnu.org/licenses/gpl-3.0.html>.
@@ -24,6 +24,7 @@
 </head>
 <div id="test"></div>
 
+<script src="./TestNodeStub.js"></script>
 <script src="../Runner.js"></script>
 <script src="./RunnerTest.js"></script>
 <script>
