Поисправлял везде максимально имейлы на player id в клиентах и документации

--- a/src/main/webapp/resources/help/snake-en.html
+++ b/src/main/webapp/resources/help/snake-en.html
@@ -75,11 +75,10 @@
                             It also contains all supported languages.</p>
                         <p>If a specific language is absent from the list, you'll have to write your own client (and then share it with us! Here: apofig@gmail.com)</p>
                         <p>Address for connecting to the game server http://codenjoy.com:</p>
-                        <pre>ws://tetrisj.jvmhost.net:12270/codenjoy-contest/ws?user=your@email.com&code=12345678901234567890</pre>
+                        <pre>ws://codenjoy.com:80/codenjoy-contest/ws?user=3edq63tw0bq4w4iem7nb&code=12345678901234567890</pre>
                         <p>Address for connecting to the game server installed in a local network:</p>
-                        <pre>ws://server_ip:8080/codenjoy-contest/ws?user=your@email.com&code=12345678901234567890</pre>
-                        <p>Here your@email.com is the email used when registering on the server,
-                            the code is your security token, you can get one from the address
+                        <pre>ws://server_ip:8080/codenjoy-contest/ws?user=3edq63tw0bq4w4iem7nb&code=12345678901234567890</pre>
+                        <p>Here 'user' - player id, the 'code' is your security token, you can get one from the address
                             bar of your browser after registering/logging in.</p>
                         <p>After connecting, the client will receive a regular (every second) line
                             of symbols which are the encoded value of the field. Format:</p>
