[server][games] Обновил шапку

--- a/src/main/javascript/test/run-test.html
+++ b/src/main/javascript/test/run-test.html
@@ -1,6 +1,6 @@
 <!--
   #%L
-  iCanCode - it's a dojo-like platform from developers to developers.
+  Codenjoy - it's a dojo-like platform from developers to developers.
   %%
   Copyright (C) 2018 Codenjoy
   %%
